# doom-xfce-panel

./: .gitignore  LICENSE  README.md  config.h.in  meson.build  plugin.desktop
src/: doomgeneric.c  plugin.c  plugin.h
